separate thread pool for application shared subscriptions processors - fix test